[Fix] Header spacing

--- a/src/style/scss/components.proj-description.scss
+++ b/src/style/scss/components.proj-description.scss
@@ -21,8 +21,6 @@
     }
 
     @include mq($from: desktop) {
-      // padding-top: ;
-      @include spacing(top, topSpace, true); //help
       margin-left: 16.6%;
       max-width: 33.3%;
     }
